@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.007.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.008.
 use strict;
 use warnings;
 
@@ -34,7 +34,7 @@ my %WriteMakefileArgs = (
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
     "Test::DZil" => 0,
-    "Test::More" => "0.89"
+    "Test::More" => 0
   },
   "VERSION" => "0.005003",
   "test" => {
@@ -55,7 +55,7 @@ my %FallbackPrereqs = (
   "Path::Tiny" => 0,
   "Term::ANSIColor" => 0,
   "Test::DZil" => 0,
-  "Test::More" => "0.89",
+  "Test::More" => 0,
   "YAML::Tiny" => 0,
   "constant" => 0,
   "strict" => 0,
