@@ -35,7 +35,7 @@ order_by = name
 exclude_filename = README
 exclude_filename = README.mkdn
 exclude_filename = README.pod
-exclude_filename = CONTRIBUTING.mkdn
+exclude_filename = CONTRIBUTING.pod
 exclude_filename = LICENSE
 exclude_filename = Makefile.PL
 include_dotfiles = 1
@@ -52,9 +52,10 @@ include_dotfiles = 1
 :version = 0.001002
 
 [Author::KENTNL::CONTRIBUTING / @Author::KENTNL/Author::KENTNL::CONTRIBUTING]
-:version = 0.001002
+-location = root
+-phase = build
+:version = 0.001003
 document_version = 0.1
-format = mkdn
 
 [CopyFilesFromBuild / @Author::KENTNL/CopyXBuild]
 copy = LICENSE
@@ -76,6 +77,8 @@ trailing_whitespace = 1
 [Test::MinimumVersion / @Author::KENTNL/Test::MinimumVersion]
 
 [Test::Compile::PerFile / @Author::KENTNL/Test::Compile::PerFile]
+:version = 0.003902
+test_template = 02-raw-require.t.tpl
 
 [Test::Perl::Critic / @Author::KENTNL/Test::Perl::Critic]
 
@@ -95,7 +98,7 @@ skips = ^Win32::Console::ANSI$
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.025000
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.025020
 
 [Prereqs::AuthorDeps / @Author::KENTNL/Prereqs::AuthorDeps]
 
@@ -186,7 +189,7 @@ modules = Dist::Zilla::App::Command::bakeini
 ; auto_prereqs_skip = File::Find
 -phase = develop
 -relationship = requires
-Dist::Zilla::Plugin::Author::KENTNL::CONTRIBUTING = 0.001002
+Dist::Zilla::Plugin::Author::KENTNL::CONTRIBUTING = 0.001003
 Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes = 0.004002
 Dist::Zilla::Plugin::Author::KENTNL::TravisCI = 0.001002
 Dist::Zilla::Plugin::Authority = 1.006
@@ -226,7 +229,7 @@ Dist::Zilla::Plugin::RemovePrereqs::Provided = 0
 Dist::Zilla::Plugin::RewriteVersion::Sanitized = 0
 Dist::Zilla::Plugin::RunExtraTests = 0
 Dist::Zilla::Plugin::Test::CPAN::Changes = 0
-Dist::Zilla::Plugin::Test::Compile::PerFile = 0
+Dist::Zilla::Plugin::Test::Compile::PerFile = 0.003902
 Dist::Zilla::Plugin::Test::EOL = 0
 Dist::Zilla::Plugin::Test::Kwalitee = 0
 Dist::Zilla::Plugin::Test::MinimumVersion = 0
