@@ -19,5 +19,7 @@ srcreadme         = mkdn
 twitter_extra_hash_tags = #distzilla
 ; auto_prereqs_skip = File::Find
 auto_prereqs_skip = ^Win32::Console::ANSI$
+Test::Compile::PerFile.:version = 0.003902
+Test::Compile::PerFile.test_template = 02-raw-require.t.tpl
 
 [Prereqs]
