@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.005003
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
 0.005002 2016-09-10T06:01:15Z
 
