@@ -1,6 +1,12 @@
 This file contains changes to DEVELOPMENT dependencies only ( both REQUIRED and OPTIONAL )
 
 0.005003
+ [Added / develop requires]
+ - Test::MinimumVersion
+
+ [Changed / develop requires]
+ - Dist::Zilla::Plugin::Author::KENTNL::CONTRIBUTING 0.001002 → 0.001003
+ - Dist::Zilla::Plugin::Test::Compile::PerFile 0 → 0.003902
 
 0.005002 2016-09-10T06:01:15Z
  [Added / develop requires]
